--- a/Sentiment_13102024.ipynb
+++ b/Sentiment_13102024.ipynb
@@ -138,9 +138,6 @@
     "def create_sentiment_table(conn):\n",
     "    \"\"\"\n",
     "    Erstellt die Tabelle Article_Sentiment, falls sie nicht existiert.\n",
-    "\n",
-    "    Args:\n",
-    "        conn (sqlite3.Connection): Die SQLite-Datenbankverbindung.\n",
     "    \"\"\"\n",
     "    cursor = conn.cursor()\n",
     "    cursor.execute('''\n",
@@ -203,14 +200,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing Batches:   4%|▍         | 33/746 [14:34<5:23:03, 27.19s/it]"
+      "Processing Batches:  17%|█▋        | 127/746 [1:28:52<5:03:06, 29.38s/it] Token indices sequence length is longer than the specified maximum sequence length for this model (516 > 512). Running this sequence through the model will result in indexing errors\n",
+      "Processing Batches: 100%|██████████| 746/746 [8:53:14<00:00, 42.89s/it]    \n"
      ]
     }
    ],
