--- a/Emotion_19102024.ipynb
+++ b/Emotion_19102024.ipynb
@@ -2,28 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[{'label': 'LABEL_5', 'score': 0.9048301577568054}]"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing Comments: 100%|██████████| 34/34 [01:57<00:00,  3.46s/it]\n"
+     ]
     }
    ],
    "source": [
-    "%pip install tf-keras\n",
     "import sqlite3\n",
     "from transformers import pipeline\n",
     "from tqdm import tqdm\n",
+    "import logging\n",
     "\n",
-    "# Lade die Emotionserkennungs-Pipeline\n",
-    "emotion_pipeline = pipeline(\"text-classification\", model=\"visegradmedia-emotion/Emotion_RoBERTa_german6_v7\")\n",
+    "# Konfigurieren Sie das Logging\n",
+    "logging.basicConfig(filename='emotion_analysis.log', level=logging.ERROR, format='%(asctime)s %(levelname)s:%(message)s')\n",
     "\n",
     "def create_emotions_table(conn):\n",
     "    cursor = conn.cursor()\n",
@@ -56,7 +53,7 @@
     "        articleID INTEGER,\n",
     "        commentID INTEGER,\n",
     "        emotionID INTEGER,\n",
-    "        PRIMARY KEY (articleID, commentID, emotionID),\n",
+    "        PRIMARY KEY (articleID, commentID),\n",
     "        FOREIGN KEY(articleID) REFERENCES Articles(articleID),\n",
     "        FOREIGN KEY(commentID) REFERENCES comments(commentID),\n",
     "        FOREIGN KEY(emotionID) REFERENCES Emotions(emotionID)\n",
@@ -81,7 +78,8 @@
     "        'LABEL_5': (5, 'keine Emotion')\n",
     "    }\n",
     "    \n",
-    "\n",
+    "    # Lade die Emotionserkennungs-Pipeline\n",
+    "    emotion_pipeline = pipeline(\"text-classification\", model=\"visegradmedia-emotion/Emotion_RoBERTa_german6_v7\")\n",
     "    \n",
     "    # Verarbeitung in Batches\n",
     "    for i in tqdm(range(0, len(all_comments), batch_size), desc='Processing Comments'):\n",
@@ -89,8 +87,9 @@
     "        texts = []\n",
     "        comment_ids = []\n",
     "        article_ids = []\n",
+    "        indices = []  # Zum Nachverfolgen der Originalindizes im Batch\n",
     "        \n",
-    "        for comment in batch:\n",
+    "        for idx, comment in enumerate(batch):\n",
     "            commentID, articleID, comment_header, comment_body = comment\n",
     "            # Kombinieren von comment_header und comment_body\n",
     "            text_parts = []\n",
@@ -105,6 +104,7 @@
     "            texts.append(text)\n",
     "            comment_ids.append(commentID)\n",
     "            article_ids.append(articleID)\n",
+    "            indices.append(idx)\n",
     "        \n",
     "        if not texts:\n",
     "            continue  # Keine gültigen Texte in diesem Batch\n",
@@ -113,35 +113,42 @@
     "        try:\n",
     "            results = emotion_pipeline(texts)\n",
     "        except Exception as e:\n",
-    "            print(f\"Fehler bei der Verarbeitung des Batches ab Index {i}: {e}\")\n",
+    "            logging.error(f\"Fehler bei der Verarbeitung des Batches ab Index {i}: {e}\")\n",
     "            continue  # Überspringen Sie diesen Batch\n",
     "        \n",
     "        # Vorbereitung der Daten zum Einfügen\n",
     "        data_to_insert = []\n",
-    "        for idx, result in enumerate(results):\n",
+    "        for idx_in_results, result in enumerate(results):\n",
+    "            score = result['score']\n",
     "            label = result['label']\n",
-    "            emotionID, emotion = emotion_label_mapping.get(label, (None, None))\n",
-    "            if emotionID is None:\n",
-    "                # Unbekanntes Label, überspringen\n",
-    "                continue\n",
-    "            data_to_insert.append((article_ids[idx], comment_ids[idx], emotionID))\n",
+    "            original_idx = indices[idx_in_results]\n",
+    "            commentID = comment_ids[idx_in_results]\n",
+    "            articleID = article_ids[idx_in_results]\n",
+    "            \n",
+    "            if score >= 0.95:\n",
+    "                emotionID, emotion = emotion_label_mapping.get(label, (5, 'keine Emotion'))\n",
+    "            else:\n",
+    "                # Score unter 95%, daher \"keine Emotion\"\n",
+    "                emotionID, emotion = (5, 'keine Emotion')\n",
+    "            \n",
+    "            data_to_insert.append((articleID, commentID, emotionID))\n",
     "        \n",
     "        # Einfügen der Ergebnisse in die Datenbank\n",
     "        try:\n",
     "            cursor.executemany('''\n",
-    "            INSERT OR IGNORE INTO Article_comment_emotions (articleID, commentID, emotionID)\n",
+    "            INSERT OR REPLACE INTO Article_comment_emotions (articleID, commentID, emotionID)\n",
     "            VALUES (?, ?, ?)\n",
     "            ''', data_to_insert)\n",
     "            conn.commit()\n",
     "        except sqlite3.Error as e:\n",
-    "            print(f\"SQLite Fehler beim Einfügen der Emotionen: {e}\")\n",
+    "            logging.error(f\"SQLite Fehler beim Einfügen der Emotionen: {e}\")\n",
     "            conn.rollback()\n",
     "\n",
     "def main():\n",
     "    # Verbindung zur Datenbank herstellen\n",
     "    conn = sqlite3.connect('derstandard.db')\n",
     "    \n",
-    "    # Tabellen erstellen\n",
+    "    # Tabellen neu erstellen\n",
     "    create_emotions_table(conn)\n",
     "    create_article_comment_emotions_table(conn)\n",
     "    \n",
@@ -152,7 +159,7 @@
     "    conn.close()\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    main()"
+    "    main()\n"
    ]
   }
  ],
