--- a/Feature_Engineering_13102024.ipynb
+++ b/Feature_Engineering_13102024.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,9 +106,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing Feature Batches:   0%|          | 0/746 [00:00<?, ?it/s]Token indices sequence length is longer than the specified maximum sequence length for this model (560 > 512). Running this sequence through the model will result in indexing errors\n",
+      "Processing Feature Batches: 100%|██████████| 746/746 [04:29<00:00,  2.77it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "# Verbindung zur SQLite-Datenbank herstellen\n",
     "conn = sqlite3.connect('derstandard.db')\n",
